08/ingress2/pay.yml
---
# Deployment 
kind: Deployment 
apiVersion: apps/v1 
metadata: 
  name: pay-deploy 
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: pay
  template: 
    metadata:
      name: pay-pod 
      labels: 
        app: pay 
    spec: 
      containers: 
      - name: pod-container
        image: whatwant/node-web:2.0
        ports: 
        - containerPort: 8080

---
# Service
kind: Service 
apiVersion: v1 
metadata: 
  name: pay-service 
spec: 
  type: ClusterIP
  # clusterIP: 10.100.10.20
  selector:
    app: pay
  ports: 
  - port: 80
    targetPort: 8080
