08/ingress2/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homepay-ingress 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-service 
            port:
              number: 80
      - path: /pay
        pathType: Prefix
        backend:
          service:
            name: pay-service
            port:
              number: 80
